Added responsive deliveries of entries

--- a/shookay.vcxproj.filters
+++ b/shookay.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="shookay.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
