--- a/shookay.vcxproj
+++ b/shookay.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
     <ClInclude Include="DwordDescription.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
