Added Find functions with callback

--- a/shookay.vcxproj
+++ b/shookay.vcxproj
@@ -168,6 +168,9 @@
     <MASM Include="FindExactWords.asm" />
     <MASM Include="FindWordsWithin.asm" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
