--- a/shookay.vcxproj.filters
+++ b/shookay.vcxproj.filters
@@ -68,4 +68,7 @@
       <Filter>Source Files</Filter>
     </MASM>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
 </Project>
